--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
     position: absolute;
     width: 50px;
     height: 50px;
-    background-color: aqua;
+    background-color: transparent;
     z-index: 9999;
 }
 
